force-app/main/default/objects/AcctSeed__Account_Payable__c/fields/AcctSeed__Age__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Age__c</fullName>
    <formula>IF(AND(TODAY() - AcctSeed__Due_Date__c&lt;=0,(Text(AcctSeed__Payment_Status__c)!=&quot;Paid&quot;)), &quot;0-Current&quot;, 
IF(AND(30&gt;=TODAY() - AcctSeed__Due_Date__c,TODAY() - AcctSeed__Due_Date__c&gt;0,(Text(AcctSeed__Payment_Status__c)!=&quot;Paid&quot;)),&quot;1-30 Days&quot;, 
IF(AND(60&gt;=TODAY() - AcctSeed__Due_Date__c,TODAY() - AcctSeed__Due_Date__c&gt;0,(Text(AcctSeed__Payment_Status__c)!=&quot;Paid&quot;)),&quot;31-60 Days&quot;, 
IF(AND(90&gt;=TODAY() - AcctSeed__Due_Date__c,TODAY() - AcctSeed__Due_Date__c&gt;0,(Text(AcctSeed__Payment_Status__c)!=&quot;Paid&quot;)),&quot;61-90 Days&quot;, 
IF(AND(TODAY() - AcctSeed__Due_Date__c&gt;90,(Text(AcctSeed__Payment_Status__c)!=&quot;Paid&quot;)),&quot;Over 90 Days&quot;, 
&quot;Paid&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Aging Category based on Due Date.</inlineHelpText>
    <label>Age</label>
    <type>Text</type>
</CustomField>