force-app/main/default/objects/AcctSeed__Account_Payable__c/fields/AcctSeed__AP_Control_Override__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__AP_Control_Override__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Use if you would like to credit this account versus the default AP Control Account set on the Accounting Settings Tab.</inlineHelpText>
    <label>AP Control Override</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The GL Account selected for this setting must Active. This GL Account is currently not Active.</errorMessage>
        <filterItems>
            <field>AcctSeed__GL_Account__c.AcctSeed__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__GL_Account__c</referenceTo>
    <relationshipName>Accounts_Payable</relationshipName>
    <type>Lookup</type>
</CustomField>