force-app/main/default/objects/AcctSeed__Account_Payable__c/fields/AcctSeed__Balance_Minus_Discount__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Balance_Minus_Discount__c</fullName>
    <formula>AcctSeed__Total__c - AcctSeed__Paid_Amount__c - AcctSeed__Credit_Memo_Applied_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total - Paid Amount - Credit Memo Applied Amount</inlineHelpText>
    <label>Balance Minus Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>