force-app/main/default/objects/AcctSeed__Account_Payable__c/fields/AcctSeed__Contact__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>An Account Payable can have either the Account (Vendor), Contact or User (Employee) as the Payee.  Only one payee type can be chosen.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Accounts_Payable</relationshipName>
    <type>Lookup</type>
</CustomField>