force-app/main/default/objects/AcctSeed__Account_Payable__c/fields/AcctSeed__Currency_Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Currency_Conversion_Rate__c</fullName>
    <inlineHelpText>The currency conversion rate for the currency.</inlineHelpText>
    <label>Currency Conversion Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>