force-app/main/default/objects/AcctSeed__Account_Payable__c/fields/AcctSeed__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Due_Date__c</fullName>
    <inlineHelpText>The date this invoice is due to the vendor.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>