force-app/main/default/objects/AcctSeed__Account_Payable__c/fields/AcctSeed__Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Net_Amount__c</fullName>
    <formula>AcctSeed__Total__c - AcctSeed__Discount_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Invoice Total minus Discount Amount.</inlineHelpText>
    <label>Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>