force-app/main/default/objects/AcctSeed__Account_Payable__c/fields/AcctSeed__Payee__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payee__c</fullName>
    <formula>IF( NOT(ISBLANK(AcctSeed__Vendor__c)) , AcctSeed__Vendor__r.Name, 
IF( NOT(ISBLANK(AcctSeed__Contact__c)) ,  AcctSeed__Contact__r.FirstName &amp; &quot; &quot;  &amp; AcctSeed__Contact__r.LastName,  
IF( NOT(ISBLANK(AcctSeed__Employee__c)) ,   AcctSeed__Employee__r.FirstName &amp; &quot; &quot;  &amp; AcctSeed__Employee__r.LastName,  
&quot;&quot; )))</formula>
    <inlineHelpText>Formula field that lists either the vendor, contact or the employee as the Payee. Used in reporting and as a convenient reference to the source record for the Payee.</inlineHelpText>
    <label>Payee</label>
    <type>Text</type>
</CustomField>