force-app/main/default/objects/AcctSeed__Account_Payable__c/fields/AcctSeed__Payee_Id__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payee_Id__c</fullName>
    <formula>IF( NOT(ISBLANK(AcctSeed__Vendor__c)) , AcctSeed__Vendor__c, 
IF( NOT(ISBLANK(AcctSeed__Contact__c)) ,  AcctSeed__Contact__c,  
IF( NOT(ISBLANK(AcctSeed__Employee__c)) ,   AcctSeed__Employee__c,  
&quot;&quot; )))</formula>
    <inlineHelpText>Formula field that lists either the vendor, contact or the employee as the Payee Id.</inlineHelpText>
    <label>Payee Id</label>
    <type>Text</type>
</CustomField>