force-app/main/default/objects/AcctSeed__Account_Payable__c/fields/AcctSeed__Proprietary_Payable_Number__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Proprietary_Payable_Number__c</fullName>
    <inlineHelpText>Used for Payable numbering outside of standard Salesforce autonumber.</inlineHelpText>
    <label>Proprietary Payable Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>