force-app/main/default/objects/AcctSeed__Account_Payable__c/fields/AcctSeed__Status__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Status__c</fullName>
    <inlineHelpText>Used in approvals of accounts payable records and therefore related detail lines. A value of &quot;Posted&quot; indicates the record is final and a debit and credit line have been entered into the transaction object for each account payable line.</inlineHelpText>
    <label>Posting Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Process</fullName>
                <default>true</default>
                <label>In Process</label>
            </value>
            <value>
                <fullName>Waiting for Approval</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>