force-app/main/default/objects/AcctSeed__Account_Payable__c/fields/AcctSeed__Total__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Total__c</fullName>
    <inlineHelpText>The total of all Account Payable Lines before a discount has been applied.</inlineHelpText>
    <label>Total</label>
    <summarizedField>AcctSeed__Account_Payable_Line__c.AcctSeed__Amount__c</summarizedField>
    <summaryForeignKey>AcctSeed__Account_Payable_Line__c.AcctSeed__Account_Payable__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>