force-app/main/default/objects/AcctSeed__Account_Payable__c/fields/AcctSeed__Type__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Type__c</fullName>
    <formula>IF(AcctSeed__Total__c &lt; 0,&quot;Credit Memo&quot;, &quot;Invoice&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically determined by the sum of the Accounts Payable Lines. If total Accounts Payable lines are negative the document is a Credit Memo. If Positive then it is an Invoice.</inlineHelpText>
    <label>Type</label>
    <type>Text</type>
</CustomField>