force-app/main/default/objects/AcctSeed__Account_Payable__c/fields/AcctSeed__Vendor__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Vendor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>An Account Payable can have either the Account (Vendor), Contact or User (Employee) as the Payee.  One object must be chosen.</inlineHelpText>
    <label>Vendor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.AcctSeed__Accounting_Type__c</field>
            <operation>contains</operation>
            <value>Vendor, Customer and Vendor</value>
        </filterItems>
        <filterItems>
            <field>Account.AcctSeed__Accounting_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Accounts Filtered on Accounting Type=Vendor and Accounting Active=True</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Project_Payable_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>