force-app/main/default/objects/AcctSeed__Account_Payable__c/fields/AcctSeedERP__Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order</label>
    <referenceTo>AcctSeedERP__Purchase_Order__c</referenceTo>
    <relationshipLabel>Payables</relationshipLabel>
    <relationshipName>Accounts_Payable</relationshipName>
    <type>Lookup</type>
</CustomField>