force-app/main/default/objects/AcctSeed__Account_Payable__c/fields/Balance_Actual__c.field-meta.xml
<CustomField>
    <fullName>Balance_Actual__c</fullName>
    <formula>ROUND(AcctSeed__Net_Amount__c,6) - ROUND(AcctSeed__Paid_Amount__c,6) - ROUND(AcctSeed__Credit_Memo_Applied_Amount__c,6)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Actual</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>