force-app/main/default/objects/AcctSeed__Account_Payable__c/fields/GL_Account_Variable_1__c.field-meta.xml
<CustomField>
    <fullName>GL_Account_Variable_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Unit (GLV1)</label>
    <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
    <relationshipLabel>Payables (Business Unit (GLV1))</relationshipLabel>
    <relationshipName>Payables</relationshipName>
    <type>Lookup</type>
</CustomField>