force-app/main/default/objects/AcctSeed__Account_Payable__c/fields/GL_Account_Variable_2__c.field-meta.xml
<CustomField>
    <fullName>GL_Account_Variable_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department (GLV2)</label>
    <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
    <relationshipLabel>Payables (Department (GLV2))</relationshipLabel>
    <relationshipName>Payables_GLV2</relationshipName>
    <type>Lookup</type>
</CustomField>