force-app/main/default/objects/AcctSeed__Account_Payable__c/fields/Payee_New__c.field-meta.xml
<CustomField>
    <fullName>Payee_New__c</fullName>
    <formula>IF( NOT(ISBLANK(AcctSeed__Vendor__c)) , IF(AcctSeed__Vendor__r.IsPersonAccount,AcctSeed__Vendor__r.FirstName &amp; &quot; &quot; &amp; AcctSeed__Vendor__r.LastName,AcctSeed__Vendor__r.Name), 
IF( NOT(ISBLANK(AcctSeed__Contact__c)) , AcctSeed__Contact__r.FirstName &amp; &quot; &quot; &amp; AcctSeed__Contact__r.LastName, 
IF( NOT(ISBLANK(AcctSeed__Employee__c)) , AcctSeed__Employee__r.FirstName &amp; &quot; &quot; &amp; AcctSeed__Employee__r.LastName, 
&quot;&quot; )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payee</label>
    <type>Text</type>
</CustomField>