force-app/main/default/objects/AcctSeed__Account_Payable__c/fields/Payment_Preference__c.field-meta.xml
<CustomField>
    <fullName>Payment_Preference__c</fullName>
    <formula>TEXT(AcctSeed__Vendor__r.Payment_Preference__c)</formula>
    <label>Payment Preference</label>
    <type>Text</type>
</CustomField>