force-app/main/default/objects/AcctSeed__Account_Payable__c/fields/Tax_Amount_Federal__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount_Federal__c</fullName>
    <label>Tax Amount - Federal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>