force-app/main/default/objects/AcctSeed__Account_Payable__c/fields/Tax_Amount_Fixed__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount_Fixed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Amount Fixed</label>
    <type>Checkbox</type>
</CustomField>