force-app/main/default/objects/AcctSeed__Account_Payable__c/fields/Tax_Rate_Retail__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate_Retail__c</fullName>
    <label>Tax Rate - Retail</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>