force-app/main/default/objects/AcctSeed__Account_Payable__c/validationRules/AcctSeed__Due_Date_Before_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>AcctSeed__Due_Date_Before_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AcctSeed__Due_Date__c &lt; AcctSeed__Date__c</errorConditionFormula>
    <errorDisplayField>AcctSeed__Due_Date__c</errorDisplayField>
    <errorMessage>The due date can not be earlier then the issue date</errorMessage>
</ValidationRule>