force-app/main/default/objects/AcctSeed__Account_Payable__c/listViews/AcctSeed__All.listView-meta.xml
<ListView>
    <fullName>AcctSeed__All</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Due_Date__c</columns>
    <columns>AcctSeed__Status__c</columns>
    <columns>AcctSeed__Payment_Status__c</columns>
    <columns>AcctSeed__Total__c</columns>
    <columns>Payee_New__c</columns>
    <columns>AcctSeed__Payee_Reference__c</columns>
    <columns>GMBLASG__Posted__c</columns>
    <filterScope>Everything</filterScope>
    <label>10 - All</label>
    <language>en_US</language>
</ListView>