force-app/main/default/objects/AcctSeed__Account_Payable__c/listViews/AcctSeed__Paid.listView-meta.xml
<ListView>
    <fullName>AcctSeed__Paid</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Status__c</columns>
    <columns>AcctSeed__Payment_Status__c</columns>
    <columns>AcctSeed__Accounting_Period__c</columns>
    <columns>AcctSeed__Payee__c</columns>
    <columns>AcctSeed__Payee_Reference__c</columns>
    <columns>AcctSeed__Type__c</columns>
    <columns>AcctSeed__Total__c</columns>
    <columns>AcctSeed__Net_Amount__c</columns>
    <columns>AcctSeed__Date__c</columns>
    <columns>AcctSeed__Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Payment_Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </filters>
    <label>Paid</label>
</ListView>