force-app/main/default/objects/AcctSeed__Account_Payable__c/listViews/AcctSeed__Ready_for_Payment.listView-meta.xml
<ListView>
    <fullName>AcctSeed__Ready_for_Payment</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Payment_Status__c</columns>
    <columns>AcctSeed__Payee__c</columns>
    <columns>AcctSeed__Payee_Reference__c</columns>
    <columns>AcctSeed__Age__c</columns>
    <columns>AcctSeed__Balance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Status__c</field>
        <operation>equals</operation>
        <value>Posted</value>
    </filters>
    <filters>
        <field>AcctSeed__Payment_Status__c</field>
        <operation>notEqual</operation>
        <value>Paid</value>
    </filters>
    <label>Ready for Payment</label>
</ListView>